<?xml version="1.0"?>
<package format="2">
  <name>tf_based_on_ar_marker</name>
  <version>0.0.0</version>
  <description>The tf_based_on_ar_marker package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf</depend>
  <depend>tf2_msgs</depend>

</package>
